--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>MSN Chat (clone)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Berry Chat</title>
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <div id="root"></div>
